--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /SwitchMe/obj/Debug
+/.vs/SwitchMe/v16/Server/sqlite3
+/.vs/SwitchMe/v16
