--- a/SwitchMe/SwitchMe.csproj
+++ b/SwitchMe/SwitchMe.csproj
@@ -32,12 +32,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\DedicatedServer64\NLog.dll</HintPath>
+      <HintPath>..\..\..\Torch\NLog.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Sandbox.Common">
+      <HintPath>..\..\..\Torch\DedicatedServer64\Sandbox.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Sandbox.Game">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\DedicatedServer64\Sandbox.Game.dll</HintPath>
+      <HintPath>..\..\..\Torch\DedicatedServer64\Sandbox.Game.dll</HintPath>
+    </Reference>
+    <Reference Include="Sandbox.Game.XmlSerializers">
+      <HintPath>..\..\..\Torch\DedicatedServer64\Sandbox.Game.XmlSerializers.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,22 +58,37 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Torch">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\Torch.dll</HintPath>
+      <HintPath>..\..\..\Torch\Torch.dll</HintPath>
     </Reference>
     <Reference Include="Torch.API">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\Torch.API.dll</HintPath>
+      <HintPath>..\..\..\Torch\Torch.API.dll</HintPath>
     </Reference>
     <Reference Include="Torch.Server">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\Torch.Server.exe</HintPath>
+      <HintPath>..\..\..\Torch\Torch.Server.exe</HintPath>
+    </Reference>
+    <Reference Include="VRage">
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Game">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\DedicatedServer64\VRage.Game.dll</HintPath>
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Game.dll</HintPath>
+    </Reference>
+    <Reference Include="VRage.Game.XmlSerializers">
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Game.XmlSerializers.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Input">
       <HintPath>..\..\..\..\Downloads\torch-server (2)\DedicatedServer64\VRage.Input.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Library">
-      <HintPath>..\..\..\..\Downloads\torch-server (2)\DedicatedServer64\VRage.Library.dll</HintPath>
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Library.dll</HintPath>
+    </Reference>
+    <Reference Include="VRage.Math">
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Math.dll</HintPath>
+    </Reference>
+    <Reference Include="VRage.Math.XmlSerializers">
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Math.XmlSerializers.dll</HintPath>
+    </Reference>
+    <Reference Include="VRage.Steam">
+      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Steam.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
