--- a/SwitchMe/SwitchMe.csproj
+++ b/SwitchMe/SwitchMe.csproj
@@ -32,18 +32,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog">
-      <HintPath>..\..\..\Torch\NLog.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\NLog.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="Sandbox.Common">
-      <HintPath>..\..\..\Torch\DedicatedServer64\Sandbox.Common.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\Sandbox.Common.dll</HintPath>
     </Reference>
     <Reference Include="Sandbox.Game">
-      <HintPath>..\..\..\Torch\DedicatedServer64\Sandbox.Game.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\Sandbox.Game.dll</HintPath>
     </Reference>
     <Reference Include="Sandbox.Game.XmlSerializers">
-      <HintPath>..\..\..\Torch\DedicatedServer64\Sandbox.Game.XmlSerializers.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\Sandbox.Game.XmlSerializers.dll</HintPath>
+    </Reference>
+    <Reference Include="Sandbox.Graphics">
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\Sandbox.Graphics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,28 +61,31 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Torch">
-      <HintPath>..\..\..\Torch\Torch.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\Torch.dll</HintPath>
     </Reference>
     <Reference Include="Torch.API">
-      <HintPath>..\..\..\Torch\Torch.API.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\Torch.API.dll</HintPath>
     </Reference>
     <Reference Include="Torch.Server">
-      <HintPath>..\..\..\Torch\Torch.Server.exe</HintPath>
+      <HintPath>..\..\TEST SERVER\Torch.Server.exe</HintPath>
     </Reference>
     <Reference Include="VRage">
-      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\VRage.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Game">
-      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Game.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\VRage.Game.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Game.XmlSerializers">
-      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Game.XmlSerializers.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\VRage.Game.XmlSerializers.dll</HintPath>
+    </Reference>
+    <Reference Include="VRage.Input">
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\VRage.Input.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Library">
-      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Library.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\VRage.Library.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Math">
-      <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Math.dll</HintPath>
+      <HintPath>..\..\TEST SERVER\DedicatedServer64\VRage.Math.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Math.XmlSerializers">
       <HintPath>..\..\..\Torch\DedicatedServer64\VRage.Math.XmlSerializers.dll</HintPath>
