--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+/GameBinaries/
+/TorchBinaries/
 /SwitchMe/obj/Debug
 /.vs/SwitchMe/v16/Server/sqlite3
 /.vs/SwitchMe/v16
