--- a/SwitchMe/SwitchMe.csproj
+++ b/SwitchMe/SwitchMe.csproj
@@ -112,6 +112,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GridImporter.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="GridFinder.cs" />
     <Compile Include="SwitchMeConfig.cs" />
