--- a/SwitchMe/SwitchMe.csproj
+++ b/SwitchMe/SwitchMe.csproj
@@ -113,6 +113,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurrentCooldown.cs" />
     <Compile Include="GridImporter.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="GridFinder.cs" />
