--- a/SwitchMe/SwitchMe.csproj
+++ b/SwitchMe/SwitchMe.csproj
@@ -60,12 +60,15 @@
       <HintPath>..\GameBinaries\Sandbox.Graphics.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Sandbox.RenderDirect">
+      <HintPath>..\..\..\..\Torch\DedicatedServer64\Sandbox.RenderDirect.dll</HintPath>
+    </Reference>
     <Reference Include="SpaceEngineers.Game">
-      <HintPath>..\..\Torch\DedicatedServer64\SpaceEngineers.Game.dll</HintPath>
+      <HintPath>C:\Users\PC\Desktop\Torch\DedicatedServer64\SpaceEngineers.Game.dll</HintPath>
     </Reference>
     <Reference Include="SpaceEngineers.ObjectBuilders, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Torch\DedicatedServer64\SpaceEngineers.ObjectBuilders.dll</HintPath>
+      <HintPath>..\..\..\..\Torch\DedicatedServer64\SpaceEngineers.ObjectBuilders.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
