--- a/SwitchMe/SwitchMe.csproj
+++ b/SwitchMe/SwitchMe.csproj
@@ -155,6 +155,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APIMethods.cs" />
     <Compile Include="CurrentCooldown.cs" />
     <Compile Include="GridImporter.cs" />
     <Compile Include="Commands.cs" />
